src/index.css
body {
  margin: 0;
  padding: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

.cosnWizard
{
	margin-top: 3em;
  margin-left: 4em;
  margin-right: 4em;
}

.next
{
}

.yes
{
  margin-right: 1em;
}

.integrationButton
{
  margin-right: 1em;
}


.nightMode
{
  background-color:black; 
  color: grey!important;
  transition: background-color 2s, color 2s;
}


.notNightMode
{
  background-color:white; 
  color: black!important;
  transition: background-color 2s, color 2s;
}

